app/globals.css
@import "tailwindcss";

/* @theme brings tailwind utilities */
/*This helps to write tailwind variables as utilities;
 Tailwind classes reference CSS variables */
@theme inline {
  --color-tertiary: var(--tertiary);
  --color-tertiary-dark: var(--tertiary-dark);
  --color-tertiaty-foreground: var(--tertiary-foreground);
  --color-background: var(--background);
  --color-background-element: var(--background-element);
  --color-foreground: var(--foreground);
  /* --color-background-2: var(--background-2); */
  --color-text-primary: var(--text-primary);
  --color-text-secondary: var(--text-secondary);

  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);
}

/* if browser supports dark mode and detects "dark" then overwrite the theme variables */
/* body pics up the theme variable in Cascade hierarchy */

:root {
  /* light theme will be added later  */
  /* --background: oklch(90.975% 0.0001 271.152);
  --background-element: oklch(1 0 0);
  --foreground: oklch(39.042% 0.00004 271.152);
  --card-foreground: oklch(78.577% 0.00009 271.152);
  --popover-foreground: oklch(0.145 0 0);

  --text-primary: oklch(25.197% 0.00003 271.152);
  --text-secondary: oklch(91.817% 0.00323 15.438);

  --tertiary: oklch(70.7% 0.165 254.624);
  --radius: 10px;
  --card: oklch(1 0 0);
  --popover: oklch(1 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(25.197% 0.00003 271.152);
  --input: oklch(25.197% 0.00003 271.152);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
  --quill-active-button-color: rgb(2, 171, 2); */

  /* backgrounds  */
  --background: oklch(25.197% 0.00003 271.152);
  --background-element: oklch(
    20.019% 0.00002 271.152
  ); /**for static elements **/
  --foreground: oklch(
    25.197% 0.00003 271.152
  ); /** for interactive elements/ buttons/skeletons **/
  --popover-foreground: oklch(28.502% 0.00003 271.152);
  /*  */
  /* text */
  --text-primary: oklch(91.817% 0.00323 15.438);
  --text-secondary: oklch(86.686% 0.0001 271.152);
  /*  */
  --radius: 10px;
  --tertiary: oklch(65.162% 0.18383 255.011);
  --tertiary-dark: #25374d;
  --card-foreground: oklch(28.502% 0.00003 271.152);
  --card: oklch(0% 0 0);
  --popover: oklch(0.205 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(22.213% 0.00003 271.152);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
  --quill-active-button-color: rgb(2, 171, 2);
}

/* this selector overwrites the root variables when detects .dark classname in body */

/* Tailwind has 3 style layers:
1: base -> resets & defaults
2: components -> reusable ui pieces
3: utilities ->atomic utility classes

@apply: lets to reuse TW utilities, But apply them globally.
These rules affect every page, These rules will exist before component styling.
Mental model: These are default visual rules of my app.
*/
@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-text-primary;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    /* backgrounds  */
    --background: oklch(25.197% 0.00003 271.152);
    --background-element: oklch(
      20.019% 0.00002 271.152
    ); /**for static elements **/
    --foreground: oklch(
      25.197% 0.00003 271.152
    ); /** for interactive elements/ buttons/skeletons **/
    --popover-foreground: oklch(28.502% 0.00003 271.152);
    /*  */
    /* text */
    --text-primary: oklch(91.817% 0.00323 15.438);
    --text-secondary: oklch(86.686% 0.0001 271.152);
    /*  */
    --tertiary: oklch(65.162% 0.18383 255.011);
    --card-foreground: oklch(28.502% 0.00003 271.152);
    --card: oklch(0% 0 0);
    --popover: oklch(0.205 0 0);
    --primary: oklch(0.922 0 0);
    --primary-foreground: oklch(0.205 0 0);
    --secondary: oklch(22.213% 0.00003 271.152);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.269 0 0);
    --muted-foreground: oklch(0.708 0 0);
    --accent: oklch(0.269 0 0);
    --accent-foreground: oklch(0.985 0 0);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.556 0 0);
    --chart-1: oklch(0.488 0.243 264.376);
    --chart-2: oklch(0.696 0.17 162.48);
    --chart-3: oklch(0.769 0.188 70.08);
    --chart-4: oklch(0.627 0.265 303.9);
    --chart-5: oklch(0.645 0.246 16.439);
    --sidebar: oklch(0.205 0 0);
    --sidebar-foreground: oklch(0.985 0 0);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.269 0 0);
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.556 0 0);
    --quill-active-button-color: rgb(2, 171, 2);
  }
}

/* QUILL RICH EDITOR */
.quill .ql-toolbar .ql-formats button svg .ql-stroke {
  color: white !important;
  stroke: white !important;
}

/* innactive */
.quill .ql-toolbar .ql-formats button:hover {
  opacity: 0.5;
}

/* active */
.quill .ql-toolbar .ql-formats .ql-active {
  color: var(--color-gray-400) !important;
  stroke: 1px solid var(--color-gray-400) !important;
  border: 1px solid var(--color-gray-400);
}
.quill .ql-toolbar .ql-formats .ql-bold .ql-active {
  color: var(--color-gray-400) !important;
  stroke: 1px solid var(--color-gray-400) !important;
  border: 1px solid var(--color-gray-400);
}

.ql-picker-label {
  color: white !important;
  stroke: white !important;
}
.ql-picker-label svg .ql-picker-options {
  color: white !important;
  stroke: white !important;
}
.ql-picker-label:hover {
  opacity: 0.5;
}

.quill {
  /* background-color: var(--color-gray-800) !important; */
  max-height: 250px !important;
  height: 250px !important;
}
.quill .ql-container p,
.html-content p {
  font-size: 16px !important;
  line-height: 22px !important;
}

.quill .ql-container h1,
.html-content h1 {
  font-size: 30px !important;
  line-height: 24px !important;
  font-weight: 400 !important;
}
.quill .ql-container h2,
.html-content h2 {
  font-size: 24px !important;
  line-height: 22px !important;
  font-weight: 400;
}
.quill .ql-container h3,
.html-content h3 {
  font-size: 20px !important;
  line-height: 24px !important;
  font-weight: 400 !important;
}

.html-content h1,
.html-content h2,
.html-content h3 {
  margin: 1.25rem 0 0.5rem;
}
.html-content p {
  margin: 0.75rem 0;
}

.quill > .ql-container > .ql-editor.ql-blank::before {
  color: var(--baseline-400) !important;
  font-style: normal !important;
}
.quill data-placeholder {
  color: var(--baseline-800) !important;
}
.ql-container.ql-snow {
  border: none !important;
}

.ql-editor {
  min-height: 200px !important;
  max-height: 250px !important;

  overflow-y: auto !important;
  padding-bottom: 1rem !important; /* Add space for readability */
  overflow-y: auto; /* Add vertical scrolling if content is too long */
  /* padding-top: 62px !important; */
  border: solid 1px rgb(209 213 219 / var(--tw-text-opacity, 1));
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

@media (max-width: 600px) {
  .ql-editor {
    min-height: 200px !important;
    max-height: 230px !important;
  }
}

.html-content a {
  text-decoration: underline;
  color: var(--primary-400);
}

.html-content ul {
  font-size: 16px !important;
  list-style-type: disc; /* Ensure bullets appear */
  margin-left: 40px !important; /* Add indentation */
}

.html-content ol {
  font-size: 16px !important;
  list-style-type: decimal; /* Ensure numbers appear */
  margin-left: 40px !important;
}
.html-content ul {
  font-size: 16px !important;
  list-style-type: decimal; /* Ensure numbers appear */
  margin-left: 40px !important;
}

.html-content li {
  margin-bottom: 5px; /* Optional: Add spacing */
}

/* HEADER */
.header-chevron-down {
  opacity: 0;
  transform: translateY(20px);
  animation: chevron-down-animated 1s ease forwards;
}

@keyframes chevron-down-animated {
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Hide scrollbar but keep scrolling */
.scroll-container {
  overflow: auto; /* or scroll */
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE + old Edge */
}

.scroll-container::-webkit-scrollbar {
  display: none; /* Chrome, Safari, Edge (Chromium) */
}

.overview-card-image-animation {
  transform: translateY(-50%);
  animation: move-image-down 1s ease forwards;
}

@keyframes move-image-down {
  to {
    transform: translateY(0);
  }
}

